[project]

name = "fundus-toolkits-common"
version = '0.0.5'
authors = [
    {name= 'Gabriel Lepetit-Aimon', email= 'gabriel.lepetit-aimon@polymtl.ca'},
]
description = """A package containing classes and functions common to the series of ``fundus-...-toolkit`` packages."""
readme = 'README.md'
requires-python = '>=3.10'

license = "MIT"
license-files = ["LICENSE"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    'numpy',
]

[project.urls]
Homepage = 'https://github.com/liv4d/fundus-toolkits-common'
Source = 'https://github.com/liv4d/fundus-toolkits-common'


[project.optional-dependencies]
dev = [
    'sphinx',           
    'sphinx-rtd-theme', # Read the docs theme
    'nbsphinx',         # To include notebook in doc
	'ipython'           # (also required to parse notebook)
]
cv2 = [
    'opencv-python-headless',
]

[tool.setuptools]
package-dir = {"" = "src"}


[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B", "I"]
line-length = 120

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**.ipynb" = ["E402", "F401"]

[tool.ruff.isort]
known-first-party = ["fundus_vessels_toolkit"]
section-order = ["future", "standard-library", "third-party", "steered_cnn", "first-party", "local-folder"]

[tool.ruff.isort.sections]
"steered_cnn" = ["steered_cnn"]

[tool.pytest.ini_options]
addopts          = "--doctest-modules src/fundus_toolkits_common --doctest-ignore-import-errors --doctest-report ndiff"
testpaths        = ["tests"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]